# ml25-project

./: .gitignore  IDEAS_AND_TODOS  download_data.py  download_files.py  main.py  preprocess_data.py  pyproject.toml  siren.py  train.py
idea1_text2stars/: __init__.py  embed.py  main.py  preprocess_data.py
