[project]
name = "ml25-project"
version = "0.1.0"
description = "Predict AirBnB price from coordinate and average rating from textual reviews."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "mosaicml>=0.31.0",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
]
